Update lec2 APPLIED THERMODYNAMICS FOR ENGINEERS corrected.htm

--- a/MECHANICAL ENGINEERING/lec2 APPLIED THERMODYNAMICS FOR ENGINEERS corrected.htm
+++ b/MECHANICAL ENGINEERING/lec2 APPLIED THERMODYNAMICS FOR ENGINEERS corrected.htm
@@ -1,122 +1,1 @@
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Applied Thermodynamics for Engineers</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Dipankar N. Basu</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Department of Mechanical Engineering</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Indian Institute of Technology - Guwahati</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>&nbsp;</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Lecture ' 02</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b><span lang=EN-IN style='font-size:12.0pt;font-family:
-"Times New Roman",serif'>Review of Thermodynamic Principles</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;
-font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>Hello friends, so again we meet in
-this particular week, where we have started our course on applied
-thermodynamics for engineers. 'During this week, 'we are reviewing the basic
-principles of thermodynamics, or whatever you must have learned in your basic
-thermodynamics course. We are reviewing those topics and preparing ourselves to
-go into the deeper discussions on the topic of applied thermodynamics.</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>In the previous lecture, which is the
-first lecture of this course, we have just reintroduced or tried to revise the
-concept of thermodynamic system, state and properties. Different types of thermodynamics
-systems basically, the closed and open systems were discussed. Then about different
-ways of defining properties, whereby we can classify a property as intensive or
-extensive.</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>Then we discussed, the concept of thermodynamics
-state, equilibrium state and finally, the zeroth law of thermodynamics which
-give away the concept of the property called temperature. So, today we are
-going to take the discussion forward and looking to discuss about the first and
-second laws of thermodynamics. </span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><b><span lang=EN-IN style='font-size:12.0pt;
-line-height:150%;font-family:"Times New Roman",serif'>(Refer Slide Time: 01:45)</span></b></p>
-
-<p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:150%;text-autospace:none'><b><span lang=EN-IN style='font-size:
-12.0pt;line-height:150%;font-family:"Times New Roman",serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
-		<figure style="margin: auto;">
-			<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MECHANICAL%20ENGINEERING/lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image001.png?raw=true"
-				alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center"
-				data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0"
-				origin-size="384,288" data-origin="," style="" data-index="12">
-		</figure>
-	</div></span></b></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>The 'first term that we have here for
-discussion today 'is the energy. Energy is a very important in any discussion
-of thermodynamics. Thermodynamics is often defined as a science of energy. </span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>From a layman's point of view or any
-general discussion point of view, the energy content in a system can be
-classified into different categories as shown here. We can assume that energy
-can exist in a system in numerous forms like thermal energy, mechanical energy,
-kinetic, potential, electrical energy, magnetic energy, chemical or nuclear
-energy under certain situations. So, it is possible that a system can have all these
-kinds of energies and the sum of all these types of energies is called the total
-energy content of the system. We are going to use 'E' to denote the total
-energy content of the system. We also called it as stored energy so, this
-symbol 'E' is used to denote the stored energy. It is an extensive property
-that is why we are using the symbol 'E' and its specific version that is 'e' defined
-as </span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN><div class="se-component se-image-container __se__float-center" contenteditable="false">
-		<figure style="margin: auto;">
-			<img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MECHANICAL%20ENGINEERING/lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image002.png?raw=true"
-				alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center"
-				data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0"
-				origin-size="384,288" data-origin="," style="" data-index="12">
-		</figure>
-	</div></span><span
-lang=EN-IN style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>or
-stored energy per unit mass is an internal or intensive property. '</span></p>
-
-<p class=MsoNormal style='margin-bottom:0in;text-align:justify;line-height:
-150%;text-autospace:none'><span lang=EN-IN style='font-size:12.0pt;line-height:
-150%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
+<p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Applied Thermodynamics for Engineers</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Dipankar N. Basu</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Department of Mechanical Engineering</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Indian Institute of Technology - Guwahati</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Lecture ' 02</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Review of Thermodynamic Principles</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">Hello friends, so again we meet inthis particular week, where we have started our course on appliedthermodynamics for engineers. 'During this week, 'we are reviewing the basicprinciples of thermodynamics, or whatever you must have learned in your basicthermodynamics course. We are reviewing those topics and preparing ourselves togo into the deeper discussions on the topic of applied thermodynamics.</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">In the previous lecture, which is thefirst lecture of this course, we have just reintroduced or tried to revise theconcept of thermodynamic system, state and properties. Different types of thermodynamicssystems basically, the closed and open systems were discussed. Then about differentways of defining properties, whereby we can classify a property as intensive orextensive.</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">Then we discussed, the concept of thermodynamicsstate, equilibrium state and finally, the zeroth law of thermodynamics whichgive away the concept of the property called temperature. So, today we aregoing to take the discussion forward and looking to discuss about the first andsecond laws of thermodynamics. </span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><strong><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">(Refer Slide Time: 01:45)</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:150%;text-autospace:none"><strong></strong></p><div class="se-component se-image-container __se__float-center" contenteditable="false"><strong> <figure style="margin: auto;"><img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MECHANICAL%20ENGINEERING/lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image001.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12"> </figure></strong></div><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">The 'first term that we have here fordiscussion today 'is the energy. Energy is a very important in any discussionof thermodynamics. Thermodynamics is often defined as a science of energy. </span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">From a layman's point of view or anygeneral discussion point of view, the energy content in a system can beclassified into different categories as shown here. We can assume that energycan exist in a system in numerous forms like thermal energy, mechanical energy,kinetic, potential, electrical energy, magnetic energy, chemical or nuclearenergy under certain situations. So, it is possible that a system can have all thesekinds of energies and the sum of all these types of energies is called the totalenergy content of the system. We are going to use 'E' to denote the totalenergy content of the system. We also called it as stored energy so, thissymbol 'E' is used to denote the stored energy. It is an extensive propertythat is why we are using the symbol 'E' and its specific version that is 'e' definedas </span></p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"></p><div class="se-component se-image-container __se__float-center" contenteditable="false"><figure style="margin: auto;"><img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MECHANICAL%20ENGINEERING/lec2%20APPLIED%20THERMODYNAMICS%20FOR%20ENGINEERS%20corrected_files/image002.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12"> </figure></div><p>orstored energy per unit mass is an internal or intensive property. '</p><p class="MsoNormal" style="margin-bottom:0in;text-align:justify;line-height:150%;text-autospace:none"><span lang="EN-IN" style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p>
